--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//selenium/webdriver/Topic_02_Selenium_By.java=UTF-8
+encoding//selenium/webdriver/Topic_03_XPath_Part_I.java=UTF-8
+encoding/<project>=UTF-8
